<resources>
    <string name="app_name">H3LP</string>
    <string name="tos_text">
        Acknowledgement

        These are the Terms of Service governing the use of this service and the agreement that operates between
you and the company. These terms of service set out the rights and obligations of all users regarding the
use of the Service.
Your access to and use of the Service is conditioned on your acceptance of and compliance with these
Terms of Service. These Terms of Service apply to all visitors, users and others who access or use the
Service.
By accessing or using the Service you agree to be bound by these Terms of Service. If You disagree with
any part of these Terms of Service then You may not access the Service.
You represent that you are over the age of 18. The Company does not permit those under 18 to use the
Service.
Your access to and use of the Service is also conditioned on Your acceptance of and compliance with the
privacy policy of the company. Our privacy policy describes our policies and procedures on the collection,
use and disclosure of Your personal information when You use the Application or the Website and tells You
about Your privacy rights and how the law protects You. Please read Our Privacy Policy carefully before
using Our Service.

User Accounts

When You create an account with Us, You must provide Us information that is accurate, complete, and
current at all times. Failure to do so constitutes a breach of the Terms, which may result in immediate
termination of Your account on Our Service.
You are responsible for safeguarding the password that You use to access the Service and for any activities
or actions under Your password, whether Your password is with Our Service or a Third-Party Social Media
Service.
You agree not to disclose Your password to any third party. You must notify Us immediately upon becoming
aware of any breach of security or unauthorized use of Your account.
You may not use as a username the name of another person or entity or that is not lawfully available for
use, a name or trademark that is subject to any rights of another person or entity other than You without
appropriate authorization, or a name that is otherwise offensive, vulgar or obscene.

    </string>
    <string name="medicalCard">My Medical Card</string>
    <string name="YearOfBirth">Year of birth*</string>
    <string name="gender">Gender*</string>
    <string name="height">Height*</string>
    <string name="weight">Weight*</string>
    <string name="yearTooRecent">Invalid year : You can not be born in the future </string>
    <string name="yearTooOld">Invalid year : You seem too old to be alive </string>
    <string name="heightTooShort">Invalid height : You seem too short </string>
    <string name="heightTooBig">Invalid height : You seem too big </string>
    <string name="weightTooLight">Invalid weight : You seem too light </string>
    <string name="weightTooHeavy">Invalid weight : You seem too heavy </string>
    <string name="Condition">Conditions </string>
    <string name="Allergy">Allergy </string>
    <string name="CurrentTreatment">Current Treatment </string>
    <string name="EmergencyContactName">Contact Name</string>
    <string name="EmergencyContactNumber">Phone Number</string>
    <string name="bloodType">Blood type*</string>
    <string name="back_button_description">Back home button</string>
    <string name="background_image_description">Background image</string>
    <string name="welcome_msg">Welcome to H3LP</string>
    <string name="phone_icon_description">Phone icon</string>
    <string name="keep_calm_meds_selection_msg">Keep Calm and select what you need</string>
    <string name="search_help_button">Search Help Nearby</string>
    <string name="call_emergency_button">Emergency Call</string>
    <string name="help_might_arrive">Help might arrive</string>
    <string name="ok">OK</string>
    <string name="h3lp_doesn_t_allow_you_to">H3LP doesn\'t </string>
    <string name="ascii_left_arrow">⟨</string>
    <string name="presentation_placeholder_bad_3">Let you have access to other\'s data</string>
    <string name="presentation_placeholder_bad_2">Store your medical information without your consent</string>
    <string name="presentation_placeholder_bad_1">Sell your medical data to 3rd parties</string>
    <string name="red_cross">Red cross</string>
    <string name="info_box">Info box</string>
    <string name="help_page">Help page</string>
    <string name="h3lp_logo">H3lp logo</string>
    <string name="the_app_that_will_safe_your_life">The app that will save your life!</string>
    <string name="safelives_all_rights_reserved">© SafeLives: All rights reserved</string>
    <string name="ascii_right_arrow">⟩</string>
    <string name="ascii_both_arrows">⟨ ⟩</string>
    <string name="green_tick">Green tick</string>
    <string name="h3lp_allows_you_to">H3LP allows you to</string>
    <string name="presentation_placeholder_good_1">Find medical assistance nearby</string>
    <string name="presentation_placeholder_good_2">Have access to your medical card</string>
    <string name="presentation_placeholder_good_3">Call emergency services</string>
    <string name="hospital">Hospitals</string>
    <string name="map_hospital">Hospitals</string>
    <string name="pharmacy">Pharmacies</string>
    <string name="map_pharmacy">Pharmacies</string>
    <string name="defibrillator">Defibrillators</string>
    <string name="map_defibrillator">Defibrillators</string>
    <string name="first_aid">First Aid Tips</string>
    <string name="hello">Hello</string>
    <string name="welcome_text">Welcome to the H3LP app</string>
    <string name="stay_safe">Stay safe</string>
    <string name="cpr_rate">CPR rate</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_button">Profile</string>
    <string name="skills">My skills/SOS Kit</string>
    <string name="tutorial_button">Tutorial</string>
    <string name="hospital_button">Hospital</string>
    <string name="defibrillator_button">Defibrillator</string>
    <string name="pharmacy_button">Pharmacy</string>
    <string name="tips_button">First Aid</string>
    <string name="cpr_rate_button">CPR Rate</string>
    <string name="help_button">CPR Help</string>
    <string name="menu_button">Menu</string>
    <string name="skills_button">Skills</string>
    <string name="cpr_rate_button_start">START</string>
    <string name="cpr_rate_button_stop">STOP</string>
    <string name="save_changes">Save changes</string>
    <string name="changes_saved">Changes saved</string>
    <string name="invalid_field_msg">ERROR : Some fields are not filled correctly</string>
    <string name="invalid_empty_msg">ERROR : Some mandatory fields (*) are left empty</string>
    <string name="username_error_field_msg">ERROR : Please choose a correct username</string>
    <string name="privacy_policy_not_acceptes">ERROR : You must accept our privacy policy first</string>
    <string name="privacy_policy_not_accepted">ERROR : You must accept our privacy policy first</string>
    <string name="info_saved">Your information has been saved</string>
    <string name="medical_info_prefs"> medicalInfoPrefs</string>
    <string name="my_skills_key">MY_SKILLS_KEY</string>
    <string name="my_skills_prefs"> mySkillsPrefs</string>
    <string name="medical_info_key">MEDICAL_INFO_KEY</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="medical_info_privacy_policy">
        We know how your medical information are important to you and we take care of your privacy. Indeed your medical data is only stored on your phone.\n In case of an emergency only your helper will receive the necessary information so he/she can help you in the best condition. After the intervention, your info will then be deleted from your helper\'s phone and you will again be the only owner of your information</string>
    <string name="pro_profile_privacy_policy">
        We know how your professional information are important to you and we take care of your privacy. Indeed your professional data is only stored on the H3lp database.\n In case of an emergency or if you respond to a post in the forum, your data will be displayed to the other users.</string>
    <string name="condition_help_msg">This Field is dedicated to any illness or diseases that a caregiver should know in case of emergency</string>
    <string name="treatment_help_msg">This Field is dedicated to any medication your are taking that a caregiver should know in case of emergency</string>
    <string name="allergy_help_msg">This Field is dedicated to any allergy you suffer from that a caregiver should know in case of emergency</string>
    <string name="ventolin_db_key"> VENTOLIN</string>
    <string name="help">H3LP!</string>
    <string name="nothing">nothing</string>
    <string name="emergency">Emergency</string>
    <string name="need_help"> HELP I NEED YOU ! </string>
    <string name="button_selected">Selected</string>
    <string name="tosbox">ToSBox</string>
    <string name="app_slogan">The app that will save your life</string>
    <string name="h3lp3rs">H3LP3RS</string>
    <string name="about_us">About us</string>
    <string name="rate_us">Rate us</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="pop_up_call_emergencies_text">We are currently looking for help nearby. If you require medical assistance, we highly recommend that you still call the local emergency services with the button below and mention that you are using our app.</string>
    <string name="did_you_call_emergency_services_popup">Did you call emergency services?</string>
    <string name="emergency_contact_title">Your Emergency Contact</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="ambulance_call">Ambulance call</string>
    <string name="call_emergency_contact">call emergency contact</string>
    <string name="scroll3on3">○○●</string>
    <string name="scroll1on3">●○○</string>
    <string name="emergencies">Emergencies</string>
    <string name="select_status">Select your status</string>
    <string name="professional_user">Professional user</string>
    <string name="normal_user">Normal user</string>
    <string name="pass">Pass</string>
    <string name="call_now">Call now</string>
</resources>