<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_page_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_icon"
            android:title="@string/settings" />

    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login_icon"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile_icon"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout_icon"
                    android:title="@string/logout" />


            </menu>


        </item>

    </group>

    <item android:title="@string/h3lp3rs">

        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us_icon"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_rate_us_icon"
                android:title="@string/rate_us" />

        </menu>


    </item>

</menu>