<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/emergency_call_popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/visbycf_medium"
        android:text="@string/emergency_contact_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emergency_call_popup_title"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_height="wrap_content"

            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="20dp">
            <ImageButton
                android:id="@+id/ambulance_call_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ambulance"
                android:contentDescription="@string/ambulance_call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/visbycf_regular"
                android:text="@string/emergencies"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="20dp">
            <ImageButton
                android:id="@+id/contact_call_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/help_person"
                android:contentDescription="@string/call_emergency_contact" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/visbycf_regular"
                android:text="@string/emergency_contact"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>