<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:background="@drawable/sidebar_header_background">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/app_margin"
        android:src="@drawable/heart_link"
        android:contentDescription="@string/h3lp_logo">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginBottom="20sp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textSize="14sp"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginBottom="@dimen/app_margin"
        />



</RelativeLayout>