<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatusSelectionActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="150dp"
        android:text="@string/select_status"
        android:textSize="33sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="370dp"
        android:text="@string/professional_user"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="370dp"
        android:text="@string/normal_user"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/button_professional"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/professional"
        android:onClick="goToProfessionalMainActivity" />

    <ImageButton
        android:id="@+id/button_patient"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="250dp"
        android:layout_marginStart="220dp"
        android:background="@drawable/patient"
        android:onClick="goToMainActivity" />

</RelativeLayout>