<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    tools:context=".presentation.PresArrivalActivity"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/pres1_textView1"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="264dp"
        android:layout_height="113dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <ImageView
        android:id="@+id/pres1_imageView1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="256dp"
        android:contentDescription="@string/h3lp_logo"
        android:src="@drawable/white_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pres1_textView1"
        android:backgroundTint="@color/light_gray"
        android:backgroundTintMode="add"
        tools:src="@drawable/white_logo" />

    <TextView
        android:id="@+id/pres1_textView2"
        android:layout_width="377dp"
        android:layout_height="93dp"
        android:fontFamily="@font/visbycf_medium"
        android:gravity="center"
        android:text="@string/the_app_that_will_safe_your_life"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pres1_imageView1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pres1_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/visbycf_regular"
        android:gravity="center"
        android:text="@string/safelives_all_rights_reserved"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pres1_textView2"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/pres1_textView4"
        android:layout_width="415dp"
        android:layout_height="120dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/scroll1on3"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>